--- a/unix/Makefile.in
+++ b/unix/Makefile.in
@@ -31,7 +31,7 @@ CC        = @CC@
 
 INCLUDES  = ${XINCLUDES} @TCL_INCLUDE_SPEC@ -I${TCL_INCPATH} -I${TK_INCPATH} @AINC@ @NISTINC@
 
-CFLAGS    = -O @CFLAGS@ @AFLAG@ ${INCLUDES} @TCLAPI@ -I${GENERIC_DIR}
+CFLAGS    = -O @CFLAGS@ @AFLAG@ ${INCLUDES} @TCLAPI@ -I${GENERIC_DIR} @DEFS@
 
 LIBSO     = -lc @ALIB@ @TCL_LIB_SPEC@
 
@@ -40,7 +40,7 @@ LIBSN     = -lc @TK_LIBS@ @ALIB@ @TCL_LIB_SPEC@ @TK_LIB_SPEC@
 SHLIB_LD     = @SHLIB_LD@
 SHLIB_SUFFIX = @SHLIB_SUFFIX@
 
-all: libsound${SHLIB_SUFFIX} libsnack${SHLIB_SUFFIX} @DOSTUBLIB@ @LIBNIST@ editversion
+all: libsound${SHLIB_SUFFIX} libsnack${SHLIB_SUFFIX} @DOSTUBLIB@ @LIBNIST@ @LIBOGG@ editversion
 
 OBJSO = sound.o jkSound.o jkSoundEngine.o jkSoundEdit.o jkSoundFile.o \
 	g711.o @AOBJ@ jkFormatMP3.o jkSoundProc.o ffa.o jkPitchCmd.o \
@@ -276,6 +276,12 @@ editversion: ${OBJSN}
 	    sed s/wish8.4/wish${TCL_VERSION}/ xs.tcl > tmp ;\
 	    mv -f tmp xs.tcl ;\
 	    chmod 755 xs.tcl ;\
+	    sed s/wish8.4/wish${TCL_VERSION}/ playlist.tcl > tmp ;\
+	    mv -f tmp playlist.tcl ;\
+	    chmod 755 playlist.tcl ;\
+	    sed s/wish8.4/wish${TCL_VERSION}/ mixplay.tcl > tmp ;\
+	    mv -f tmp mixplay.tcl ;\
+	    chmod 755 mixplay.tcl ;\
 	    cd ../../unix ;\
 	fi
 LIBNIST = @NISTLIBS@ -lc @TCL_LIB_SPEC@ -L. @SNACK_STUB_LIB_FLAG@
