SVP 14OCT2021: Patches for building on Windows 32 and 64 bit.
- generic/jkFormatMP3.c: Fixed roundf() redefinition with NEEDS_ROUNDF.
- generic/jkSound.h: Don't use Tcl_SeekOld() and Tcl_TellOld() for TCL 8.6 and above.
- generic/jkSoundEngine.c: Fixed SEGV in current_positionCmd() (Ralf Fassel).
- win/Makefile.in: Changed SNACK_INSTALL_DIR suffix to SNACK_PATCH_LEVEL.
- win/configure.in: Added SNACK_PATCH_LEVEL.
- win/jkAudIO_win.c: Fixed mingw builderror with NEEDS_KSDATAFORMAT_SUBTYPE_PCM.
- win/sver.sh: Works with both SNACK_PATCH_LEVEL and SNACK_VERSION.

--- a/win/Makefile.in
+++ b/win/Makefile.in
@@ -5,7 +5,7 @@ CC = gcc
 CFLAGS = @CFLAGS@
 
 INSTALL_DIR = @prefix@
-SNACK_INSTALL_DIR = $(INSTALL_DIR)/lib/snack@SNACK_VERSION@
+SNACK_INSTALL_DIR = $(INSTALL_DIR)/lib/snack@SNACK_PATCH_LEVEL@
 
 # NOTE: You will need to update this path if DX6 is not installed in /mingw/dx6!
 # DX6 for Mingw: http://people.montana.com/%7Ebowman/Software/ming.zip
